using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Amigyo{
	public enum EventType{
		None, Standard, MassGeneration, StrongFish
	}
}